--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "typescript": "5.1.6"
