--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@shared/*": ["src/shared/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+      "@sectionsPage/*": ["src/sectionsPage/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
